--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,7 @@ jobs:
         id: review
         uses: actions/dependency-review-action@v4
         with:
-          comment-summary-in-pr: true
+          comment-summary-in-pr: always
 
       # - name: Install jq for JSON parsing
       #   run: sudo apt-get update && sudo apt-get install -y jq
