--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,7 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           comment-summary-in-pr: always
+          vulnerability-check: true
 
       # - name: Install jq for JSON parsing
       #   run: sudo apt-get update && sudo apt-get install -y jq
