--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,7 @@ jobs:
 
       - name: Run dependency review
         id: review
+        continue-on-error: true
         uses: actions/dependency-review-action@v4
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
