--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,7 +94,6 @@ jobs:
         continue-on-error: true
         uses: actions/dependency-review-action@v4
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
           comment-summary-in-pr: always
           vulnerability-check: true
 
@@ -102,24 +101,24 @@ jobs:
         id: deps
         run: |
           echo "Dependency review completed. See above for details."
-          echo "Vulnerabilities found: ${{ steps.review.outputs.vulnerable-changes }}"
-          echo "${{ steps.review.outputs.vulnerable-changes}}" >> dependency.json 
-          # Create Markdown header
-          echo "### 🧩 Dependency Review Summary" > deps-summary.md
-          echo "" >> deps-summary.md
-          echo "| Change Type | Package | Version | Severity | Details |" >> deps-summary.md
-          echo "|--------------|----------|----------|-----------|----------|" >> deps-summary.md
+          echo "Vulnerabilities found: ${{ steps.review.outputs.comment-content }}"
+          # echo "${{ steps.review.outputs.vulnerable-changes}}" >> dependency.json 
+          # # Create Markdown header
+          # echo "### 🧩 Dependency Review Summary" > deps-summary.md
+          # echo "" >> deps-summary.md
+          # echo "| Change Type | Package | Version | Severity | Details |" >> deps-summary.md
+          # echo "|--------------|----------|----------|-----------|----------|" >> deps-summary.md
 
-          # Append rows
-          jq -r '
-            .[]
-            | select(any(.vulnerabilities[]?; .severity == "high" or .severity == "critical"))
-            | "| \(.change_type) | \(.name) | \(.version // "-") | \([.vulnerabilities[]? | select(.severity == "high" or .severity == "critical") | .severity] | join(", ")) | \([.vulnerabilities[]? | select(.severity == "high" or .severity == "critical") | .advisory_summary] | join(" / ")) |"
-          ' dependency.json >> deps-summary.md
+          # # Append rows
+          # jq -r '
+          #   .[]
+          #   | select(any(.vulnerabilities[]?; .severity == "high" or .severity == "critical"))
+          #   | "| \(.change_type) | \(.name) | \(.version // "-") | \([.vulnerabilities[]? | select(.severity == "high" or .severity == "critical") | .severity] | join(", ")) | \([.vulnerabilities[]? | select(.severity == "high" or .severity == "critical") | .advisory_summary] | join(" / ")) |"
+          # ' dependency.json >> deps-summary.md
 
-          cat deps-summary.md
-          cat deps-summary.md > TEMP
-          echo $TEMP >> $GITHUB_OUTPUT
+          # cat deps-summary.md
+          # cat deps-summary.md > TEMP
+          # echo $TEMP >> $GITHUB_OUTPUT
 
 
       - name: Comment PR with audit results
