--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,11 +97,18 @@ jobs:
           comment-summary-in-pr: always
           vulnerability-check: true
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y pandoc
+
       - name: Dependency review result
         id: deps
         run: |
           echo "Dependency review completed. See above for details."
           echo "Vulnerabilities found: ${{ steps.review.outputs.comment-content }}"
+          sed '/<div id="scorecard">/,/<\/div>/d' input.html > filtered.html
+          pandoc -f html -t gfm -o deps-summary.md filtered.html
           # echo "${{ steps.review.outputs.vulnerable-changes}}" >> dependency.json 
           # # Create Markdown header
           # echo "### 🧩 Dependency Review Summary" > deps-summary.md
