--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
         run: |
           echo "Dependency review completed. See above for details."
           echo "Vulnerabilities found: ${{ steps.review.outputs.comment-content }}"
-          echo "${{ steps.review.outputs.vulnerable-changes}}" > input.html
+          echo "${{ steps.review.outputs.comment-content}}" > input.html
           sed '/<div id="scorecard">/,/<\/div>/d' input.html > filtered.html
           pandoc -f html -t gfm -o deps-summary.md filtered.html
           # echo "${{ steps.review.outputs.vulnerable-changes}}" >> dependency.json 
