--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,8 +92,7 @@ jobs:
           soft_fail: true
           output_format: json
           output_file_path: kube-checkov-report.json
-          skip_check: |
-            CKV_K8S_8
+          skip_check: CKV_K8S_8,CKV_K8S_9
           download_external_modules: true
 
   test:
