--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,7 @@ jobs:
           output_file_path: kube-checkov-report.json
           skip_check: CKV_K8S_8,CKV_K8S_9
           download_external_modules: true
+          quiet: true
 
   test:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
