--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,11 +90,20 @@ jobs:
           directory: 'lib/kube'
           framework: kubernetes
           soft_fail: true
-          output_format: md
-          output_file_path: kube-checkov-report.md
+          output_format: json
+          output_file_path: kube-checkov-report.json
           skip_check: CKV_K8S_8,CKV_K8S_9
           download_external_modules: true
           quiet: true
+      
+      - name: Convert JSON to Markdown
+        run: |
+          echo "# Checkov Scan Report" > checkov_report.md
+          echo "" >> checkov_report.md
+          jq -r '.results.failed_checks[] | "## \(.check_id) - \(.check_name)\n- File: `\(.file_path)`\n- Resource: `\(.resource)`\n- Severity: `\(.severity)`\n- Message: \(.message)\n"' checkov_report.json >> checkov_report.md
+
+          cat checkov_report.md
+
 
   test:
     if: github.event.pull_request.state == 'open' && github.event.pull_request.draft == false
