--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
           framework: kubernetes
           soft_fail: true
           output_format: json
-          output_file_path: kube-checkov-report.json
+          output_file_path: report/kube-checkov-report.json
           skip_check: CKV_K8S_8,CKV_K8S_9
           download_external_modules: true
           quiet: true
@@ -100,7 +100,7 @@ jobs:
         run: |
           echo "# Checkov Scan Report" > checkov_report.md
           echo "" >> checkov_report.md
-          cat kube-checkov-report.json
+          cat kube-checkov-report.
           # jq -r '.results.failed_checks[] | "## \(.check_id) - \(.check_name)\n- File: `\(.file_path)`\n- Resource: `\(.resource)`\n- Severity: `\(.severity)`\n- Message: \(.message)\n"' kube-checkov-report.json >> checkov_report.md
 
           cat checkov_report.md
