--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
         run: |
           echo "# Checkov Scan Report" > checkov_report.md
           echo "" >> checkov_report.md
-          cat kube-checkov-report.
+          cat report/kube-checkov-report.json 
           # jq -r '.results.failed_checks[] | "## \(.check_id) - \(.check_name)\n- File: `\(.file_path)`\n- Resource: `\(.resource)`\n- Severity: `\(.severity)`\n- Message: \(.message)\n"' kube-checkov-report.json >> checkov_report.md
 
           cat checkov_report.md
