--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,6 @@ jobs:
           framework: kubernetes
           soft_fail: true
           output_format: json
-          output_file_path: report
           skip_check: CKV_K8S_8,CKV_K8S_9
           download_external_modules: true
           quiet: true
@@ -100,9 +99,10 @@ jobs:
       - name: Convert JSON to Markdown
         run: |
           echo "${{ steps.checkov.outputs.results }}" > result.json
-          echo "# Checkov Scan Report" > checkov_report.md
-          echo "" >> checkov_report.md
-          jq -r '.results.failed_checks[] | "## \(.check_id) - \(.check_name)\n- File: `\(.file_path)`\n- Resource: `\(.resource)`\n- Severity: `\(.severity)`\n- Message: \(.message)\n"' result.json >> checkov_report.md
+          cat result.json
+          # echo "# Checkov Scan Report" > checkov_report.md
+          # echo "" >> checkov_report.md
+          # jq -r '.results.failed_checks[] | "## \(.check_id) - \(.check_name)\n- File: `\(.file_path)`\n- Resource: `\(.resource)`\n- Check Result: `\(.check_result.result)`\n"' result.json >> checkov_report.md
 
           cat checkov_report.md
 
