--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,7 @@ jobs:
           directory: 'lib/kube'
           framework: kubernetes
           soft_fail: true
-          output_format: cli
+          output_format: json
           skip_check: CKV_K8S_8,CKV_K8S_9
           download_external_modules: true
           quiet: true
