--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,16 +85,17 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Checkov on Kubernetes manifests
-        uses: bridgecrewio/checkov-action@v12
         id: checkov
-        with:
-          directory: 'lib/kube'
-          framework: kubernetes
-          soft_fail: true
-          output_format: json
-          skip_check: CKV_K8S_8,CKV_K8S_9
-          download_external_modules: true
-          quiet: true
+        run: |
+          pip install checkov
+          checkov -d lib/kube  \
+          --skip-check CKV_K8S_8,CKV_K8S_9  \
+          --quiet --soft-fail \
+          --output json --download-external-modules true \
+          --framework kubernetes || true > result.json
+          cat result.json
+          RESULTS=$(cat result.json)
+          # echo "::set-output name=results::${RESULTS}"
       
       - name: Convert JSON to Markdown
         run: |
