--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,11 +106,12 @@ jobs:
           --output json --download-external-modules true \
           --framework kubernetes > result.json
 
+          cat result.json
           echo "# Checkov Scan Report" > checkov_report.md
           echo "" >> checkov_report.md
           jq -r '.results.failed_checks[] | "## \(.check_id) - \(.check_name)\n- File: `\(.file_path)`\n- Resource: `\(.resource)`\n- Check Result: `\(.check_result.result)`\n"' result.json >> checkov_report.md
 
-          cat checkov_report.md
+          # cat checkov_report.md
 
       - name: Comment PR with checkov results
         continue-on-error: true
