--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,7 +109,12 @@ jobs:
           cat result.json
           echo "# Checkov Scan Report" > checkov_report.md
           echo "" >> checkov_report.md
-          jq -r '.results.failed_checks[] | "## \(.check_id) - \(.check_name)\n- File: `\(.file_path)`\n- Resource: `\(.resource)`\n- Check Result: `\(.check_result.result)`\n"' result.json >> checkov_report.md
+          echo "| Check ID | Check Name | File | Lines | Resource | Result |" >> checkov_report.md
+          echo "|-----------|-------------|-------|--------|-----------|---------|" >> checkov_report.md
+
+          jq -r '.results.failed_checks[] |
+            "| \(.check_id) | \(.check_name) | `\(.file_path)` | \(.file_line_range[0])–\(.file_line_range[1]) | `\(.resource)` | \(.check_result.result) |"
+          ' result.json >> checkov_report.md
 
           # cat checkov_report.md
 
