--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,9 @@ jobs:
         if: steps.changes.outputs.changed == 'true'
         run: |
           pip install checkov
-          checkov -d lib/kube  \
+          echo "Running Checkov on changed files:"
+          echo "${{ steps.changes.outputs.files }}"
+          checkov -f  ${{ steps.changes.outputs.files }}  \
           --skip-check CKV_K8S_8,CKV_K8S_9  \
           --quiet --soft-fail \
           --output json --download-external-modules true \
