--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,39 +114,7 @@ jobs:
           scan-type: 'fs'
           scan-ref: '.'
           format: 'template'
-          template: |
-            {
-              # Trivy Filesystem Scan Report
-
-                Generated at: {{ now }}
-
-                ---
-
-                {{- range . }}
-                ## Target: {{ .Target }}
-
-                {{- if .Vulnerabilities }}
-                ### Vulnerabilities
-                | Package | Vulnerability | Severity | Installed | Fixed | Title |
-                |----------|----------------|-----------|------------|--------|--------|
-                {{- range .Vulnerabilities }}
-                | {{ .PkgName }} | {{ .VulnerabilityID }} | {{ .Severity }} | {{ .InstalledVersion }} | {{ .FixedVersion }} | {{ .Title }} |
-                {{- end }}
-                {{- end }}
-
-                {{- if .Misconfigurations }}
-                ### Misconfigurations
-                | ID | Severity | Title | Description | Resolution |
-                |----|-----------|--------|--------------|-------------|
-                {{- range .Misconfigurations }}
-                | {{ .ID }} | {{ .Severity }} | {{ .Title }} | {{ .Description | replace "\n" " " }} | {{ .Resolution | replace "\n" " " }} |
-                {{- end }}
-                {{- end }}
-
-                ---
-
-                {{- end }}
-            }
+          template: markdown.tpl
           output: 'trivy-report.md'
           severity: 'HIGH,CRITICAL'
           ignore-unfixed: true
