--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
         id: trivy
         uses: aquasecurity/trivy-action@0.24.0
         with:
-          scan-type: 'fs'
+          scan-type: 'filesystem'
           scan-ref: '.'
           format: 'template'
           template: '@markdown.tpl'
